Fixed font issue when viewing on safari

--- a/static/css/perdiem.css
+++ b/static/css/perdiem.css
@@ -4,7 +4,7 @@ h1, h2, h3, h4, h5, h6, p, li, input [type=submit] {
 }
 
 h4 [type=submit] {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'roboto', sans-serif;
 }
 
 h1 {
